make button work

--- a/blogDetails.html
+++ b/blogDetails.html
@@ -97,8 +97,8 @@
                         <div class="tags">
                             <div class="rightSide-tag">
                                 <span class="point tag">Tags</span>
-                                <button class="tag-btn">Kitchan</button>
-                                <button class="tag-btn tags-btn">Bedroom</button>
+                                <button class="tag-btn tags-btn tag-btn-bottom">Kitchan</button>
+                                <button class="tag-btn tag-btn-bottom">Bedroom</button>
                             </div>
                             <div class="icons">
                                 <img src="./img/1.png">
@@ -192,12 +192,12 @@
                                 <span class="point tag main-tag">Tags</span>
                             </div>
                             <div class="left-side-tag">
-                                <button class="tag-btn btn-group">Kitchan</button>
-                                <button class="tag-btn tags-btn btn-group">Bedroom</button>
-                                <button class="tag-btn tags-btn btn-group">Building</button>
-                                <button class="tag-btn tags-btn btn-group">Architecture</button>
-                                <button class="tag-btn tags-btn btn-group">Kitchen Planning</button>
-                                <button class="tag-btn tags-btn btn-group">Bedroom</button>
+                                <button class="tag-btn tags-btn btn-group">Kitchan</button>
+                                <button class="tag-btn btn-group">Bedroom</button>
+                                <button class="tag-btn btn-group">Building</button>
+                                <button class="tag-btn btn-group">Architecture</button>
+                                <button class="tag-btn btn-group">Kitchen Planning</button>
+                                <button class="tag-btn btn-group">Bedroom</button>
                             </div>
                         </div>
                     </div>
@@ -249,8 +249,9 @@
                                 <span class="heading">Contact</span>
                                 <ul class="footer-text-link footer-text">
                                     <li>55 East Birchwood Ave. Brooklyn, New York 11201</li>
-                                    <li> contact@interno.com</li>
-                                    <li>(123) 456 - 7890</li>
+                                    <li><a href="https://mail.google.com/mail/?view=cm&fs=1&su=SUBJECT&body=BODY"
+                                            target="_blank">contact@interno.com</a></li>
+                                    <li><a href="tel:(123)-456-7890">(123) 456 - 7890</a></li>
                                 </ul>
                             </div>
                         </div>
