--- a/faq's.html
+++ b/faq's.html
@@ -40,16 +40,17 @@
                     </div>
                 </div>
             </nav>
-            <header>
-                <div class="main-header">
-                    <img src="./img/Photo (26).jpg">
-                    <div class="img-about">
-                        <span class="img-about-heading">Faq’s</span>
-                        <span class="img-about-text"><a href="./index.html">Home</a> / Faq</span>
-                    </div>
+        </div>
+        <header>
+            <div class="main-header">
+                <img src="./img/Photo (26).jpg">
+                <div class="img-about">
+                    <span class="img-about-heading">Faq’s</span>
+                    <span class="img-about-text"><a href="./index.html">Home</a> / Faq</span>
                 </div>
-            </header>
-
+            </div>
+        </header>
+        <div class="container">
             <section>
                 <div class="section-container">
                     <span class="section-heading">Every Question Answered</span>
@@ -230,20 +231,23 @@
                                 <span class="heading">Contact</span>
                                 <ul class="footer-text-link footer-text">
                                     <li>55 East Birchwood Ave. Brooklyn, New York 11201</li>
-                                    <li> contact@interno.com</li>
-                                    <li>(123) 456 - 7890</li>
+                                    <li><a href="https://mail.google.com/mail/?view=cm&fs=1&su=SUBJECT&body=BODY"
+                                            target="_blank">contact@interno.com</a></li>
+                                    <li><a href="tel:(123)-456-7890">(123) 456 - 7890</a></li>
                                 </ul>
                             </div>
                         </div>
                     </div>
-                    <div class="copyright">
-                        <hr>
-                        <div class="copyright-text">
-                            <span>Copyright © Interno | Designed by Victorflow Templates - Powered by Webflow</span>
-                        </div>
-                    </div>
                 </div>
             </footer>
+        </div>
+        <hr>
+        <div class="container">
+            <div class="copyright">
+                <div class="copyright-text">
+                    <span>Copyright © Interno | Designed by Victorflow Templates - Powered by Webflow</span>
+                </div>
+            </div>
         </div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
