--- a/homepage.html
+++ b/homepage.html
@@ -288,9 +288,6 @@
                         <span class="counter-active">Happy CUstomers</span>
                     </div>
                 </div>
-                <div class="counter-line">
-                    <span></span>
-                </div>
             </div>
         </div>
         <div class="container">
@@ -405,13 +402,15 @@
                                 <span class="heading">Contact</span>
                                 <ul class="footer-text-link footer-text">
                                     <li>55 East Birchwood Ave. Brooklyn, New York 11201</li>
-                                    <li> contact@interno.com</li>
-                                    <li>(123) 456 - 7890</li>
+                                    <li><a href="https://mail.google.com/mail/?view=cm&fs=1&su=SUBJECT&body=BODY"
+                                            target="_blank">contact@interno.com</a></li>
+                                    <li><a href="tel:(123)-456-7890">(123) 456 - 7890</a></li>
                                 </ul>
                             </div>
                         </div>
                     </div>
                 </div>
+            </footer>
         </div>
         <hr>
         <div class="container">
@@ -421,8 +420,6 @@
                 </div>
             </div>
         </div>
-        </footer>
-    </div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
