--- a/licence.html
+++ b/licence.html
@@ -165,8 +165,9 @@
                                 <span class="heading">Contact</span>
                                 <ul class="footer-text-link footer-text">
                                     <li>55 East Birchwood Ave. Brooklyn, New York 11201</li>
-                                    <li> contact@interno.com</li>
-                                    <li>(123) 456 - 7890</li>
+                                    <li><a href="https://mail.google.com/mail/?view=cm&fs=1&su=SUBJECT&body=BODY"
+                                        target="_blank">contact@interno.com</a></li>
+                                <li><a href="tel:(123)-456-7890">(123) 456 - 7890</a></li>
                                 </ul>
                             </div>
                         </div>
