--- a/blog.html
+++ b/blog.html
@@ -53,6 +53,9 @@
         <div class="container">
             <section>
                 <div class="main-section">
+                    <div class="main-section-heading">
+                        <span class="card-details-heading">Latest Post</span>
+                    </div>
                     <div class="sub-section">
                         <div class="sub-section-img">
                             <img src="./img/Photo (14).png">
@@ -75,6 +78,9 @@
                 </div>
 
                 <div class="card">
+                    <div class="card-details-heading">
+                        <span class="card-details-heading">Articles & News</span>
+                    </div>
                     <div class="cards">
                         <div class="card-details">
                             <div class="card-img">
@@ -378,8 +384,9 @@
                                 <span class="heading">Contact</span>
                                 <ul class="footer-text-link footer-text">
                                     <li>55 East Birchwood Ave. Brooklyn, New York 11201</li>
-                                    <li> contact@interno.com</li>
-                                    <li>(123) 456 - 7890</li>
+                                    <li><a href="https://mail.google.com/mail/?view=cm&fs=1&su=SUBJECT&body=BODY"
+                                            target="_blank">contact@interno.com</a></li>
+                                    <li><a href="tel:(123)-456-7890">(123) 456 - 7890</a></li>
                                 </ul>
                             </div>
                         </div>
