make meka menu on every page and make gmail and phone no work and update massage section margin

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                             <ul class="nav-links">
                                 <li><a href="./homepage.html">Home</a></li>
                                 <li class="mega-menu">
-                                    <span><a href="./about.html">Pages</a></span>
+                                    <span>Pages</span>
                                     <div class="mega-menu-content">
                                         <ul class="mega">
                                             <li><a href="./about.html">About</a></li>
@@ -40,7 +40,6 @@
                                             <li><a href="./password.html">Password</a></li>
                                             <li><a href="./404.html">Not Found</a></li>
                                             <li><a href="./changelog.html">Changelog</a></li>
-
                                         </ul>
                                     </div>
                                 </li>
@@ -400,7 +399,7 @@
                                 <span class="heading">Contact</span>
                                 <ul class="footer-text-link footer-text">
                                     <li>55 East Birchwood Ave. Brooklyn, New York 11201</li>
-                                    <li><a href="https://mail.google.com/mail/?view=cm&fs=1&su=SUBJECT&body=BODY"
+                                    <li><a href="https://mail.google.com/mail/?view=cm&fs=1&to=contact@interno.com&su=&body="
                                             target="_blank">contact@interno.com</a></li>
                                     <li><a href="tel:(123)-456-7890">(123) 456 - 7890</a></li>
                                 </ul>
