--- a/404.html
+++ b/404.html
@@ -24,7 +24,25 @@
                         <div class="navbar">
                             <ul class="nav-links">
                                 <li><a href="./index.html">Home</a></li>
-                                <li><a href="./about.html">Pages</a></li>
+                                <li class="mega-menu">
+                                    <span>Pages</span>
+                                    <div class="mega-menu-content">
+                                        <ul class="mega">
+                                            <li><a href="./about.html">About</a></li>
+                                            <li><a href="./blogDetails.html">Blog Details</a></li>
+                                            <li><a href="./projectDetails.html">Project Details</a></li>
+                                            <li><a href="./serviceSingle.html">Service Single</a></li>
+                                            <li><a href="./team.html">Team</a></li>
+                                            <li><a href="./teamSingle.html">Member Profile</a></li>
+                                            <li><a href="./licence.html">Licence</a></li>
+                                            <li><a href="./faq's.html">Faq's</a></li>
+                                            <li><a href="./price.html">Price</a></li>
+                                            <li><a href="./password.html">Password</a></li>
+                                            <li><a href="./404.html">Not Found</a></li>
+                                            <li><a href="./changelog.html">Changelog</a></li>
+                                        </ul>
+                                    </div>
+                                </li>
                                 <li><a href="./service.html">Service</a></li>
                                 <li><a href="./project.html">Project</a></li>
                                 <li><a href="./blog.html">Blog</a></li>
