--- a/homepage.html
+++ b/homepage.html
@@ -402,7 +402,7 @@
                                 <span class="heading">Contact</span>
                                 <ul class="footer-text-link footer-text">
                                     <li>55 East Birchwood Ave. Brooklyn, New York 11201</li>
-                                    <li><a href="https://mail.google.com/mail/?view=cm&fs=1&su=SUBJECT&body=BODY"
+                                    <li><a href="https://mail.google.com/mail/?view=cm&fs=1&to=contact@interno.com&su=&body="
                                             target="_blank">contact@interno.com</a></li>
                                     <li><a href="tel:(123)-456-7890">(123) 456 - 7890</a></li>
                                 </ul>
