--- a/teamSingle.html
+++ b/teamSingle.html
@@ -22,7 +22,25 @@
                         <div class="navbar">
                             <ul class="nav-links">
                                 <li><a href="./index.html">Home</a></li>
-                                <li><a href="./about.html">Pages</a></li>
+                                <li class="mega-menu">
+                                    <span>Pages</span>
+                                    <div class="mega-menu-content">
+                                        <ul class="mega">
+                                            <li><a href="./about.html">About</a></li>
+                                            <li><a href="./blogDetails.html">Blog Details</a></li>
+                                            <li><a href="./projectDetails.html">Project Details</a></li>
+                                            <li><a href="./serviceSingle.html">Service Single</a></li>
+                                            <li><a href="./team.html">Team</a></li>
+                                            <li><a href="./teamSingle.html">Member Profile</a></li>
+                                            <li><a href="./licence.html">Licence</a></li>
+                                            <li><a href="./faq's.html">Faq's</a></li>
+                                            <li><a href="./price.html">Price</a></li>
+                                            <li><a href="./password.html">Password</a></li>
+                                            <li><a href="./404.html">Not Found</a></li>
+                                            <li><a href="./changelog.html">Changelog</a></li>
+                                        </ul>
+                                    </div>
+                                </li>
                                 <li><a href="./service.html">Service</a></li>
                                 <li><a href="./project.html">Project</a></li>
                                 <li><a href="./blog.html">Blog</a></li>
@@ -69,11 +87,13 @@
                         <div class="details">
                             <div class="mail info">
                                 <button class="details-btn"><i class="fa fa-regular fa-envelope arrow"></i></button>
-                                <span class="btn-text">info@yourdomain.com</span>
+                                <span class="btn-text"><a
+                                        href="https://mail.google.com/mail/?view=cm&fs=1&to=info@yourdomain.com&su=&body="
+                                        target="_blank">info@yourdomain.com</a></span>
                             </div>
                             <div class="phone info">
                                 <button class="details-btn"><i class="fa fa-solid fa-phone arrow"></i></button>
-                                <span class="btn-text">+1 (378) 400-1234</span>
+                                <span class="btn-text"><a href="tel:+1 (378) 400-1234">+1 (378) 400-1234</a></span>
                             </div>
                             <div class="globe info">
                                 <button class="details-btn"><i class="fa fa-solid fa-earth-asia arrow"></i></button>
@@ -194,7 +214,7 @@
                         <img src="./img/3.png">
                         <img src="./img/4.png">
                     </div>
-                    <span class="address">+1 (378) 400-1234
+                    <span class="address"> +1 (378) 400-1234
                         julie@email.com</span>
                 </div>
                 <div class="team-image">
@@ -278,7 +298,7 @@
                                 <span class="heading">Contact</span>
                                 <ul class="footer-text-link footer-text">
                                     <li>55 East Birchwood Ave. Brooklyn, New York 11201</li>
-                                    <li><a href="https://mail.google.com/mail/?view=cm&fs=1&su=SUBJECT&body=BODY"
+                                    <li><a href="https://mail.google.com/mail/?view=cm&fs=1&to=contact@interno.com&su=&body="
                                             target="_blank">contact@interno.com</a></li>
                                     <li><a href="tel:(123)-456-7890">(123) 456 - 7890</a></li>
                                 </ul>
