change mail action and make mega menu responsive

--- a/blogDetails.html
+++ b/blogDetails.html
@@ -195,14 +195,14 @@
                         </div>
                         <div class="sidebar-container">
                             <div class="sidebar-container-items">
-                                <span class="sidebar-heading ">Categories</span>
-                                <span class="container-item-pera">Decoration </span>
+                                <span class="sidebar-heading">Categories</span>
+                                <span class="container-item-pera"><a href="#">Decoration</a></span>
                                 <hr class="sidebar-line">
-                                <span class="container-item-pera">Door Windows</span>
+                                <span class="container-item-pera"><a href="#">Door Windows</a></span>
                                 <hr class="sidebar-line">
-                                <span class="container-item-pera">Home Land</span>
+                                <span class="container-item-pera"><a href="#">Home Land</a></span>
                                 <hr class="sidebar-line">
-                                <span class="container-item-pera"> Roof Installation</span>
+                                <span class="container-item-pera"><a href="#">Roof Installation</a></span>
                             </div>
                         </div>
                         <div class="tags-left">
