counter probleam solved

--- a/about.html
+++ b/about.html
@@ -70,7 +70,7 @@
         </header>
         <div class="container">
             <section>
-                <div class="main-section">
+                <div class="main-section about-main-section">
                     <div class="icon">
                         <img src="./img/Pattern.png">
                     </div>
