make footer as link

--- a/blogDetails.html
+++ b/blogDetails.html
@@ -242,11 +242,11 @@
                             <div class="footer-text-content">
                                 <span class="heading">Pages</span>
                                 <ul class="footer-text-link">
-                                    <li>About Us</li>
-                                    <li>Our Projects</li>
-                                    <li>Our Team</li>
-                                    <li>Contact Us</li>
-                                    <li>Services</li>
+                                    <li><a href="./about.html">About Us</a></li>
+                                    <li><a href="./projectDetails.html">Our Projects</a></li>
+                                    <li><a href="./team.html">Our Team</a></li>
+                                    <li><a href="./contactUs.html">Contact Us</a></li>
+                                    <li><a href="./service.html">Services</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -254,11 +254,11 @@
                             <div class="footer-text-content">
                                 <span class="heading">Services</span>
                                 <ul class="footer-text-link">
-                                    <li>Kitchan</li>
-                                    <li>Living Area</li>
-                                    <li>Bathroom</li>
-                                    <li>Dinning Hall</li>
-                                    <li>Bedroom</li>
+                                    <li><a href="#">Kitchan</a></li>
+                                    <li><a href="#">Living Area</a></li>
+                                    <li><a href="#">Bathroom</a></li>
+                                    <li><a href="#">Dinning Hall</a></li>
+                                    <li><a href="#">Bedroom</a></li>
                                 </ul>
                             </div>
                         </div>
