--- a/about.html
+++ b/about.html
@@ -191,11 +191,11 @@
                             <div class="footer-text-content">
                                 <span class="heading">Pages</span>
                                 <ul class="footer-text-link">
-                                    <li>About Us</li>
-                                    <li>Our Projects</li>
-                                    <li>Our Team</li>
-                                    <li>Contact Us</li>
-                                    <li>Services</li>
+                                    <li><a href="./about.html">About Us</a></li>
+                                    <li><a href="./projectDetails.html">Our Projects</a></li>
+                                    <li><a href="./team.html">Our Team</a></li>
+                                    <li><a href="./contactUs.html">Contact Us</a></li>
+                                    <li><a href="./service.html">Services</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -203,11 +203,11 @@
                             <div class="footer-text-content">
                                 <span class="heading">Services</span>
                                 <ul class="footer-text-link">
-                                    <li>Kitchan</li>
-                                    <li>Living Area</li>
-                                    <li>Bathroom</li>
-                                    <li>Dinning Hall</li>
-                                    <li>Bedroom</li>
+                                    <li><a href="#">Kitchan</a></li>
+                                    <li><a href="#">Living Area</a></li>
+                                    <li><a href="#">Bathroom</a></li>
+                                    <li><a href="#">Dinning Hall</a></li>
+                                    <li><a href="#">Bedroom</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -217,8 +217,8 @@
                                 <ul class="footer-text-link footer-text">
                                     <li>55 East Birchwood Ave. Brooklyn, New York 11201</li>
                                     <li><a href="https://mail.google.com/mail/?view=cm&fs=1&to=contact@interno.com&su=&body="
-                                        target="_blank">contact@interno.com</a></li>
-                                <li><a href="tel:(123)-456-7890">(123) 456 - 7890</a></li>
+                                            target="_blank">contact@interno.com</a></li>
+                                    <li><a href="tel:(123)-456-7890">(123) 456 - 7890</a></li>
                                 </ul>
                             </div>
                         </div>
