--- a/teamSingle.html
+++ b/teamSingle.html
@@ -214,8 +214,9 @@
                         <img src="./img/3.png">
                         <img src="./img/4.png">
                     </div>
-                    <span class="address"> +1 (378) 400-1234
-                        julie@email.com</span>
+                    <span class="address"><a href="tel:+1 (378) 400-1234">1 (378) 400-1234</a><a
+                            href="https://mail.google.com/mail/?view=cm&fs=1&to=julie@email.com&su=&body="
+                            target="_blank">julie@email.com</a></span>
                 </div>
                 <div class="team-image">
                     <img src="./img/Photo (8).png">
@@ -273,11 +274,11 @@
                             <div class="footer-text-content">
                                 <span class="heading">Pages</span>
                                 <ul class="footer-text-link">
-                                    <li>About Us</li>
-                                    <li>Our Projects</li>
-                                    <li>Our Team</li>
-                                    <li>Contact Us</li>
-                                    <li>Services</li>
+                                    <li><a href="./about.html">About Us</a></li>
+                                    <li><a href="./projectDetails.html">Our Projects</a></li>
+                                    <li><a href="./team.html">Our Team</a></li>
+                                    <li><a href="./contactUs.html">Contact Us</a></li>
+                                    <li><a href="./service.html">Services</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -285,11 +286,11 @@
                             <div class="footer-text-content">
                                 <span class="heading">Services</span>
                                 <ul class="footer-text-link">
-                                    <li>Kitchan</li>
-                                    <li>Living Area</li>
-                                    <li>Bathroom</li>
-                                    <li>Dinning Hall</li>
-                                    <li>Bedroom</li>
+                                    <li><a href="#">Kitchan</a></li>
+                                    <li><a href="#">Living Area</a></li>
+                                    <li><a href="#">Bathroom</a></li>
+                                    <li><a href="#">Dinning Hall</a></li>
+                                    <li><a href="#">Bedroom</a></li>
                                 </ul>
                             </div>
                         </div>
