make cloned of img when click in projectDetials page

--- a/homepage.html
+++ b/homepage.html
@@ -111,11 +111,11 @@
                             when lookings at its layouts the points of using
                             that it has a more-or-less normal.</p>
                         <div class="outside">
-                            <div class="em-service-icon">
-                                <i class="fa-solid fa-phone-volume arrows"></i>
+                            <div class="em-service-icon"><a href="tel:012345678">
+                                <i class="fa-solid fa-phone-volume arrows"></i></a>
                             </div>
                             <div class="contact">
-                                <P>012345678</P>
+                                <p><a href="tel:012345678">012345678</a></P>
                                 <h3>Call Us Anytime</h3>
                             </div>
                         </div>
