--- a/projectDetails.html
+++ b/projectDetails.html
@@ -12,6 +12,16 @@
 
 <body>
     <div class="main-container">
+        <div class="img-overlay">
+            <div class="content">
+                <div class="btn-wrap">
+                    <div class="zoom-img-overlay">
+
+                    </div>
+                    <button class="close-btn"><i class="fa fa-solid fa-xmark"></i></button>
+                </div>
+            </div>
+        </div>
         <div class="container">
             <nav>
                 <div class="nav">
@@ -97,7 +107,7 @@
                     </div>
                 </div>
 
-                <div class="zoom-img">
+                <div class="zoom-img popup">
                     <div class="zoom">
                         <img src="./img/Photo (35).png">
                     </div>
@@ -154,8 +164,8 @@
                                 <ul class="footer-text-link footer-text">
                                     <li>55 East Birchwood Ave. Brooklyn, New York 11201</li>
                                     <li><a href="https://mail.google.com/mail/?view=cm&fs=1&to=contact@interno.com&su=&body="
-                                        target="_blank">contact@interno.com</a></li>
-                                <li><a href="tel:(123)-456-7890">(123) 456 - 7890</a></li>
+                                            target="_blank">contact@interno.com</a></li>
+                                    <li><a href="tel:(123)-456-7890">(123) 456 - 7890</a></li>
                                 </ul>
                             </div>
                         </div>
