--- a/blog.html
+++ b/blog.html
@@ -101,6 +101,7 @@
                     </div>
                     <div class="cards">
                         <div class="card-details">
+                        <button class="blog-btn card-btn" type="button">Kitchan Design</button>
                             <div class="card-img">
                                 <img src="./img/Photo (4).png">
                             </div>
@@ -115,6 +116,7 @@
                             </div>
                         </div>
                         <div class="card-details">
+                            <button class="blog-btn card-btn" type="button">Living Design</button>
                             <div class="card-img">
                                 <img src="./img/Photo (5).png">
                             </div>
@@ -129,6 +131,7 @@
                             </div>
                         </div>
                         <div class="card-details">
+                            <button class="blog-btn card-btn" type="button">Interior Design</button>
                             <div class="card-img">
                                 <img src="./img/Photo (6).png">
                             </div>
@@ -143,6 +146,7 @@
                             </div>
                         </div>
                         <div class="card-details">
+                            <button class="blog-btn card-btn" type="button">kitchen Design</button>
                             <div class="card-img">
                                 <img src="./img/Photo (15).png">
                             </div>
@@ -157,6 +161,7 @@
                             </div>
                         </div>
                         <div class="card-details">
+                            <button class="blog-btn card-btn" type="button">Living Design</button>
                             <div class="card-img">
                                 <img src="./img/Photo (16).png">
                             </div>
@@ -171,6 +176,7 @@
                             </div>
                         </div>
                         <div class="card-details">
+                            <button class="blog-btn card-btn" type="button">Interior Design</button>
                             <div class="card-img">
                                 <img src="./img/Photo (17).png">
                             </div>
@@ -185,6 +191,7 @@
                             </div>
                         </div>
                         <div class="card-details">
+                            <button class="blog-btn card-btn" type="button">kitchen Design</button>
                             <div class="card-img">
                                 <img src="./img/Photo (4).png">
                             </div>
@@ -199,6 +206,7 @@
                             </div>
                         </div>
                         <div class="card-details">
+                            <button class="blog-btn card-btn" type="button">Living Design</button>
                             <div class="card-img">
                                 <img src="./img/Photo (5).png">
                             </div>
@@ -213,6 +221,7 @@
                             </div>
                         </div>
                         <div class="card-details">
+                            <button class="blog-btn card-btn" type="button">Interior Design</button>
                             <div class="card-img">
                                 <img src="./img/Photo (6).png">
                             </div>
@@ -227,6 +236,7 @@
                             </div>
                         </div>
                         <div class="card-details">
+                            <button class="blog-btn card-btn" type="button">kitchen Design</button>
                             <div class="card-img">
                                 <img src="./img/Photo (15).png">
                             </div>
@@ -241,6 +251,7 @@
                             </div>
                         </div>
                         <div class="card-details">
+                            <button class="blog-btn card-btn" type="button">Living Design</button>
                             <div class="card-img">
                                 <img src="./img/Photo (16).png">
                             </div>
@@ -255,6 +266,7 @@
                             </div>
                         </div>
                         <div class="card-details">
+                            <button class="blog-btn card-btn" type="button">Interior Design</button>
                             <div class="card-img">
                                 <img src="./img/Photo (17).png">
                             </div>
@@ -269,6 +281,7 @@
                             </div>
                         </div>
                         <div class="card-details">
+                        <button class="blog-btn card-btn" type="button">kitchen Design</button>
                             <div class="card-img">
                                 <img src="./img/Photo (4).png">
                             </div>
@@ -283,6 +296,7 @@
                             </div>
                         </div>
                         <div class="card-details">
+                            <button class="blog-btn card-btn" type="button">Living Design</button>
                             <div class="card-img">
                                 <img src="./img/Photo (5).png">
                             </div>
@@ -297,6 +311,7 @@
                             </div>
                         </div>
                         <div class="card-details">
+                            <button class="blog-btn card-btn" type="button">Interior Design</button>
                             <div class="card-img">
                                 <img src="./img/Photo (6).png">
                             </div>
@@ -311,6 +326,7 @@
                             </div>
                         </div>
                         <div class="card-details">
+                            <button class="blog-btn card-btn" type="button">kitchen Design</button>
                             <div class="card-img">
                                 <img src="./img/Photo (15).png">
                             </div>
@@ -325,6 +341,7 @@
                             </div>
                         </div>
                         <div class="card-details">
+                            <button class="blog-btn card-btn" type="button">Living Design</button>
                             <div class="card-img">
                                 <img src="./img/Photo (16).png">
                             </div>
@@ -339,6 +356,7 @@
                             </div>
                         </div>
                         <div class="card-details">
+                            <button class="blog-btn card-btn" type="button">Interior Design</button>
                             <div class="card-img">
                                 <img src="./img/Photo (17).png">
                             </div>
