make image of team mamber flip

--- a/about.html
+++ b/about.html
@@ -122,27 +122,91 @@
                 </div>
         </div>
         <div class="team">
+            <div class="team-header">
+                <span class="team-header-heading">What the People Thinks
+                    About Us</span>
+            </div>
             <div class="team-content">
-                <div class="team-image">
-                    <img src="./img/Photo (10).png">
-                </div>
-                <div class="team-image">
-                    <img src="./img/Photo (9).png">
-                </div>
-                <div class="team-text">
-                    <span class="team-text-heading">Nattasha Julie
-                        Design, Australia</span>
-                    <div class="icons icons-img">
-                        <img src="./img/1.png">
-                        <img src="./img/2.png">
-                        <img src="./img/3.png">
-                        <img src="./img/4.png">
+                <div class="flip-img">
+                    <div class="flip-front">
+                        <div class="team-image1">
+                            <img src="./img/Photo (10).png">
+                        </div>
+                        <div class="team-text1">
+                            <span class="team-text-heading">Charlott Levi
+                                Design, Australia</span>
+                            <div class="icons icons-img">
+                                <img src="./img/1.png">
+                                <img src="./img/2.png">
+                                <img src="./img/3.png">
+                                <img src="./img/4.png">
+                            </div>
+                            <span class="address"><a href="tel:+1 (378) 400-1234">1 (378) 400-1234</a><a
+                                    href="https://mail.google.com/mail/?view=cm&fs=1&to=Charlott Levi@email.com&su=&body="
+                                    target="_blank">Charlott Levi@email.com</a></span>
+                        </div>
                     </div>
-                    <span class="address">+1 (378) 400-1234
-                        julie@email.com</span>
                 </div>
-                <div class="team-image">
-                    <img src="./img/Photo (8).png">
+
+                <div class="flip-img">
+                    <div class="flip-front">
+                        <div class="team-image2">
+                            <img src="./img/Photo (9).png">
+                        </div>
+                        <div class="team-text2">
+                            <span class="team-text-heading">Nattasha Julie
+                                Design, Australia</span>
+                            <div class="icons icons-img">
+                                <img src="./img/1.png">
+                                <img src="./img/2.png">
+                                <img src="./img/3.png">
+                                <img src="./img/4.png">
+                            </div>
+                            <span class="address"><a href="tel:+1 (378) 400-1234">1 (378) 400-1234</a><a
+                                    href="https://mail.google.com/mail/?view=cm&fs=1&to=julie@email.com&su=&body="
+                                    target="_blank">julie@email.com</a></span>
+                        </div>
+                    </div>
+                </div>
+                <div class="flip-img">
+                    <div class="flip-front">
+                        <div class="team-image">
+                            <img src="./img/Photo (50).png">
+                        </div>
+                        <div class="team-text">
+                            <span class="team-text-heading">John Smith
+                                Design, Australia</span>
+                            <div class="icons icons-img">
+                                <img src="./img/1.png">
+                                <img src="./img/2.png">
+                                <img src="./img/3.png">
+                                <img src="./img/4.png">
+                            </div>
+                            <span class="address"><a href="tel:+1 (378) 400-1234">1 (378) 400-1234</a><a
+                                    href="https://mail.google.com/mail/?view=cm&fs=1&to=John Smith@email.com&su=&body="
+                                    target="_blank">John Smith@email.com</a></span>
+                        </div>
+                    </div>
+                </div>
+                <div class="flip-img">
+                    <div class="flip-front">
+                        <div class="team-image3">
+                            <img src="./img/Photo (8).png">
+                        </div>
+                        <div class="team-text">
+                            <span class="team-text-heading">Nora Owen
+                                Design, Australia</span>
+                            <div class="icons icons-img">
+                                <img src="./img/1.png">
+                                <img src="./img/2.png">
+                                <img src="./img/3.png">
+                                <img src="./img/4.png">
+                            </div>
+                            <span class="address"><a href="tel:+1 (378) 400-1234">1 (378) 400-1234</a><a
+                                    href="https://mail.google.com/mail/?view=cm&fs=1&to=Nora Owen@email.com&su=&body="
+                                    target="_blank">Nora Owen@email.com</a></span>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
