make last changes responsive

--- a/team.html
+++ b/team.html
@@ -70,7 +70,7 @@
         </header>
         <div class="container">
             <section>
-                <div class="cards">
+                <div class="cards team-page-card">
                     <div class="team-cards">
                         <div class="images-team">
                             <a href="./teamSingle.html"><img src="./img/Photo (10).png" class="team-mamber"></a>
