make some changes in gmial

--- a/about.html
+++ b/about.html
@@ -142,8 +142,8 @@
                                 <img src="./img/4.png">
                             </div>
                             <span class="address"><a href="tel:+1 (378) 400-1234">1 (378) 400-1234</a><a
-                                    href="https://mail.google.com/mail/?view=cm&fs=1&to=Charlott Levi@email.com&su=&body="
-                                    target="_blank">Charlott Levi@email.com</a></span>
+                                    href="https://mail.google.com/mail/?view=cm&fs=1&to=CharlottLevi@email.com&su=&body="
+                                    target="_blank">CharlottLevi@email.com</a></span>
                         </div>
                     </div>
                 </div>
@@ -174,7 +174,7 @@
                             <img src="./img/Photo (50).png">
                         </div>
                         <div class="team-text">
-                            <span class="team-text-heading">John Smith
+                            <span class="team-text-heading">John Smith<br>
                                 Design, Australia</span>
                             <div class="icons icons-img">
                                 <img src="./img/1.png">
@@ -183,8 +183,8 @@
                                 <img src="./img/4.png">
                             </div>
                             <span class="address"><a href="tel:+1 (378) 400-1234">1 (378) 400-1234</a><a
-                                    href="https://mail.google.com/mail/?view=cm&fs=1&to=John Smith@email.com&su=&body="
-                                    target="_blank">John Smith@email.com</a></span>
+                                    href="https://mail.google.com/mail/?view=cm&fs=1&to=JohnSmith@email.com&su=&body="
+                                    target="_blank">JohnSmith@email.com</a></span>
                         </div>
                     </div>
                 </div>
@@ -194,7 +194,7 @@
                             <img src="./img/Photo (8).png">
                         </div>
                         <div class="team-text">
-                            <span class="team-text-heading">Nora Owen
+                            <span class="team-text-heading">Nora Owen<br>
                                 Design, Australia</span>
                             <div class="icons icons-img">
                                 <img src="./img/1.png">
@@ -203,8 +203,8 @@
                                 <img src="./img/4.png">
                             </div>
                             <span class="address"><a href="tel:+1 (378) 400-1234">1 (378) 400-1234</a><a
-                                    href="https://mail.google.com/mail/?view=cm&fs=1&to=Nora Owen@email.com&su=&body="
-                                    target="_blank">Nora Owen@email.com</a></span>
+                                    href="https://mail.google.com/mail/?view=cm&fs=1&to=NoraOwen@email.com&su=&body="
+                                    target="_blank">NoraOwen@email.com</a></span>
                         </div>
                     </div>
                 </div>
