make layout same as figma

--- a/blogDetails.html
+++ b/blogDetails.html
@@ -87,12 +87,12 @@
                             <span class="queto-text arrows">The details are not the details.
                                 They make the design.</span>
                         </div>
-                        <span class="blog-heading">Design sprints are great</span>
+                        <span class="blog-heading blogdetails-heading">Design sprints are great</span>
                         <span class="blog-peragraph middle-text">Lorem ipsum dolor sit amet, adipiscing Aliquam eu sem
                             vitae
                             turpmaximus.posuere in.Contrary to popular belief.There are many variations of passages of
                             Lorem Ipsum available, but the majority have suffered.</span>
-                        <div class="points">
+                        <div class="points blogdetails-point">
                             <span class="blog-point"><span class="point">1</span><span class="blog-peragraph">Contrary
                                     to
                                     popular belief.There are many variations of passages of Lorem Ipsum available, but
