--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
                             when lookings at its layouts the points of using
                             that it has a more-or-less normal.</p>
                         <div class="outside">
-                            <div class="em-service-icon"><a href="tel:012345678">
-                                    <i class="fa-solid fa-phone-volume arrows"></i></a>
+                            <div class="em-service-icon">
+                                <img src="./img/Call.svg">
                             </div>
                             <div class="contact">
                                 <p><a href="tel:012345678">012345678</a></P>
