--- a/licence.html
+++ b/licence.html
@@ -115,7 +115,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="changelog-container">
+                <div class="changelog-container licence-con">
                     <div class="font-styling">
                         <div class="font-container">
                             <div class="right-font">
