--- a/homepage.html
+++ b/homepage.html
@@ -64,7 +64,7 @@
         </div>
         <header>
             <div class="banner">
-                <div class="intro">
+                <div class="intro banner-intro">
                     <h4 class="intro-heading">Let Your Home Be Unique</h4>
                     <p class="intro-peragraph">There are many variations of the passages of lorem Ipsum
                         fromavailable, majority.</p>
@@ -111,8 +111,8 @@
                             when lookings at its layouts the points of using
                             that it has a more-or-less normal.</p>
                         <div class="outside">
-                            <div class="em-service-icon"><a href="tel:012345678">
-                                <i class="fa-solid fa-phone-volume arrows"></i></a>
+                            <div class="em-service-icon">
+                                <img src="./img/Call.svg">
                             </div>
                             <div class="contact">
                                 <p><a href="tel:012345678">012345678</a></P>
