--- a/licence.html
+++ b/licence.html
@@ -23,7 +23,7 @@
                             <ul class="nav-links">
                                 <li><a href="./index.html">Home</a></li>
                                 <li class="mega-menu">
-                                    <span>Pages</span>
+                                    <span class="mega-menu-item">Pages</span>
                                     <div class="mega-menu-content">
                                         <ul class="mega">
                                             <li><a href="./about.html">About</a></li>
